--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,10 @@ dependencies:
   flutter_bloc: ^8.1.6
   sqflite: ^2.3.3+1
   flutter_svg: ^2.0.10+1
+  easy_stepper: ^0.8.5+1
+  image_picker: ^1.1.2
+  intl: ^0.19.0
+  path_provider: ^2.1.4
 
 dev_dependencies:
   flutter_test:
